updated server to use hpms2016 data
